--- a/assets/css/home/hero.css
+++ b/assets/css/home/hero.css
@@ -1,7 +1,11 @@
 .hero {
-  padding: 2rem 0 0 0;
-  background: var(--c11);
-  box-shadow: inset 0 -4rem var(--c0);
+  padding: 2rem 0;
+  background: var(--c-11);
+  box-shadow: inset 0 -6rem var(--c-0);
+}
+
+.hero__title {
+  margin-bottom: 1rem;
 }
 
 .hero__content {
@@ -11,10 +15,10 @@
 
 .hero__title::after {
   content: ".";
-  color: var(--cp1);
+  color: var(--cp-1);
 }
 
-.content__right {
+.hero__frame {
   height: 400px;
 }
 
@@ -28,10 +32,13 @@
 @media (min-width: 768px) {
   .hero {
     padding: 0;
-    background: var(--c12);
-    box-shadow: inset 0 -8rem var(--c0);
-    background: var(--c12) url("../../images/dec/bottom-left.svg") no-repeat;
-    background-position: 1rem 31rem;
+    box-shadow: inset 0 -4rem var(--c-0);
+    background: var(--c-12) url("../../images/dec/bottom-left.svg") no-repeat;
+    background-position: 1rem 35rem;
+  }
+
+  .hero__title {
+    margin-bottom: 2rem;
   }
 
   .hero__content {
@@ -41,7 +48,7 @@
     justify-content: center;
   }
 
-  .content__right {
+  .hero__frame {
     height: 700px;
   }
 }
