--- a/assets/css/utilities/components.css
+++ b/assets/css/utilities/components.css
@@ -16,6 +16,10 @@
   padding-left: 1rem;
 }
 
+.section {
+  padding: 3rem 0;
+}
+
 /* Layout */
 .mb-05 {
   margin-bottom: 0.5rem;
@@ -29,6 +33,10 @@
   margin-bottom: 2rem;
 }
 
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
 /* Button */
 
 .btn-primary {
@@ -37,7 +45,7 @@
   padding: 0.75rem 1rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   background: linear-gradient(#ffbf00, #f2a50c);
-  color: var(--cp5);
+  color: var(--cp-5);
   border-radius: 5px;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
   border: none;
@@ -53,5 +61,9 @@
   .container {
     padding-right: 2rem;
     padding-left: 2rem;
+  }
+
+  .btn-primary {
+    padding: 1rem 1.5rem;
   }
 }
