--- a/assets/css/home/catalog.css
+++ b/assets/css/home/catalog.css
@@ -1,20 +1,15 @@
-.catalog__title::after {
-  content: ".";
-  color: var(--cp-1);
-}
-
 .catalog__list {
   overflow-x: scroll;
   gap: 1rem;
   padding: 0 0 1rem 0;
 }
 
-.card__title {
+.catalogCard__title {
   align-items: center;
   gap: 0.5rem;
 }
 
-.card__title::before {
+.catalogCard__title::before {
   transition: width 0.3s ease;
   content: "";
   display: inline-block;
@@ -24,16 +19,16 @@
   margin: auto 0;
 }
 
-.card:hover .card__title::before {
+.card:hover .catalogCard__title::before {
   width: 2rem;
 }
 
-.card__frame {
+.catalogCard__frame {
   width: 300px;
   height: 400px;
 }
 
-.card__image {
+.catalogCard__image {
   width: 100%;
   height: 100%;
   display: block;
@@ -46,7 +41,7 @@
     overflow: hidden;
   }
 
-  .card__frame {
+  .catalogCard__frame {
     width: auto;
     height: auto;
   }
