--- a/assets/css/utilities/components.css
+++ b/assets/css/utilities/components.css
@@ -37,6 +37,10 @@
   margin-bottom: 3rem;
 }
 
+.mb-4 {
+  margin-bottom: 4rem;
+}
+
 /* Button */
 
 .btn-primary {
@@ -55,6 +59,20 @@
 
 .btn-primary:hover {
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+/* Styles */
+.yellow-point::after {
+  content: ".";
+  color: var(--cp-1);
+}
+
+.img {
+  display: block;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media (min-width: 768px) {
