--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,4 @@
 @import url("./home/hero.css");
 @import url("./home/catalog.css");
 @import url("./home/overview.css");
+@import url("./home/partners.css");
