--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,4 @@
 @import url("./home/catalog.css");
 @import url("./home/overview.css");
 @import url("./home/partners.css");
+@import url("./home/testimony.css");
