--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,4 @@
 @import url("./home/overview.css");
 @import url("./home/partners.css");
 @import url("./home/testimony.css");
+@import url("./home/insurance.css");
