--- a/assets/css/utilities/components.css
+++ b/assets/css/utilities/components.css
@@ -44,6 +44,7 @@
 /* Button */
 
 .btn-primary {
+  transition: 0.3 ease;
   display: block;
   text-transform: uppercase;
   padding: 0.75rem 1rem;
@@ -57,8 +58,27 @@
   width: fit-content;
 }
 
+.btn-secundary {
+  transition: 0.3 ease;
+  display: block;
+  text-transform: uppercase;
+  padding: 0.75rem 1rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  background: var(--c-10);
+  color: var(--c-2);
+  border-radius: 5px;
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  border: none;
+  cursor: pointer;
+  width: fit-content;
+}
+
 .btn-primary:hover {
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+.btn-secundary:hover {
+  background: #2a2a2a;
 }
 
 /* Styles */
