feat: add products page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,7 @@
 @import url("./home/partners.css");
 @import url("./home/testimony.css");
 @import url("./home/insurance.css");
+
+/* Products */
+
+@import url("./pages/products/products.css");
