--- a/assets/css/pages/contact/send.css
+++ b/assets/css/pages/contact/send.css
@@ -38,7 +38,7 @@
 }
 
 .contact__container--bottom {
-  padding: 2rem 1rem;
+  padding: 0 1rem;
   background: var(--c-1);
 }
 
@@ -50,6 +50,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  padding: 1rem;
 }
 
 .form__button {
@@ -58,7 +59,7 @@
 
 @media (min-width: 768px) {
   .contact {
-    grid-template-columns: minmax(320px, 450px) minmax(500px, 680px);
+    grid-template-columns: minmax(320px, 450px) minmax(500px, 750px);
     justify-content: center;
     background: var(--c-11);
     box-shadow: inset 0 -10rem 0 var(--c-1);
@@ -78,12 +79,13 @@
 
   .contact__info {
     border-radius: 0px;
-    padding: 4rem 4rem;
+    padding: 3rem;
   }
 
   .contact__form {
     background: var(--c-0) url("../../../images/dec/bottom-right.svg")
       calc(100% - 2rem) calc(100% - 2rem) no-repeat;
+    padding: 3rem;
   }
 
   .form__button {
