preparing the environment for developing the budget page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,7 @@
 
 @import url("./pages/contact/send.css");
 @import url("./pages/contact/localization.css");
+
+/* Budget */
+
+@import url("./pages/budget/main.css");
